# sol-stake-view-program

./: .gitignore  Cargo.toml  README.md  package.json
.github/actions/setup/: action.yml
.github/workflows/: main.yml
clients/cli/: Cargo.toml  README.md
clients/cli/src/: main.rs
clients/js/: README.md  package.json
clients/js/test/: noop.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: get.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: generate-clients.mjs  utils.mjs
scripts/client/: format-rust.mjs  lint-rust.mjs  test-rust.mjs
scripts/program/: build.mjs  format.mjs  lint.mjs
