[package]
name = "paladin-sol-stake-view-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "EdC9NCxx4R1SsT5nKN2cQB87XDHGAL1XUbmC5W2nCMmF"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
borsh = "1"
shank = "0.4.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "2.0"
