[package]
name = "paladin-sol-stake-view-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "5DVCQTwNrDBg5yBNRVWSQ7p6Jk1euxXJb6aDYYdjw4Vw"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
bincode = "1.3.3"
borsh = "1"
bytemuck = "1.16"
bytemuck_derive = "1.7"
num_enum = "0.7"
shank = "0.4.2"
solana-program = "2.1"
