[package]
name = "paladin-sol-stake-view-cli"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
base64 = "0.22.1"
bytemuck = "1.16"
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
paladin-sol-stake-view-program-client = { path = "../rust" }
solana-clap-v3-utils = "2.0.3"
solana-cli-config = "2.0.3"
solana-client = "2.0.3"
solana-logger = "2.0.3"
solana-remote-wallet = "2.0.3"
solana-sdk = "2.0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = "2.0.3"
