[package]
name = "paladin-sol-stake-view-cli"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
base64 = "0.22.1"
bytemuck = "1.16"
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
paladin-sol-stake-view-program-client = { path = "../rust" }
solana-clap-v3-utils = "1.18.23"
solana-cli-config = "1.18.23"
solana-client = "1.18.23"
solana-logger = "1.18.23"
solana-remote-wallet = "1.18.23"
solana-sdk = "1.18.23"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = "1.18.23"
