[package]
name = "paladin-sol-stake-view-program-client"
version = "0.0.0"
description = "A generated Rust library for the Sol Stake View program"
repository = "https://github.com/paladin-bladesmith/sol-stake-view-program"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "0.10"
bytemuck = "1.16"
bytemuck_derive = "1.7"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.0", optional = true }
solana-program = "2.0"
spl-pod = "0.3.1"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.0"
solana-sdk = "2.0"
solana-vote-program = "2.0"
